--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,79 +1,15 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --normal-bigger-font: 2rem;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --gray-color: #9d9ea1;
+  --light-gray-color: #d1d2d2;
+  --theme-pink-color: #ff42bd;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
 
 * {
+  direction: rtl;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -82,26 +18,72 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  font-size: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.header {
+  width: 100%;
+  height: 15rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.header_main {
+  height: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.main_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.main_right {
+  width: 50%;
+}
+.right_logo{
+  display: none;
+}
+
+.right_address {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  color: var(--gray-color);
+  padding-right: 1rem;
+  width: 100%;
+}
+
+.address_text {
+  padding-right: 1rem;
+}
+
+.address_dropDown {
+  padding-right: 0.5rem;
+  font-size: var(--normal-bigger-font);
+  color: var(--theme-pink-color);
+  font-weight: 900;
+}
+
+.main_search input{
+  border: none;
+  background: var(--light-gray-color);
+  border-radius: 8px;
+  height: 24px;
+  display: none;
+}
+
+.search_button{
+  color: var(--light-gray-color);
+  font-size: var(--normal-bigger-font);
+}
+
+.main_left{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 35%;
+  font-size: var(--normal-bigger-font);
 }
