--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,15 +20,16 @@ html,
 body {
   max-width: 100vw;
   font-size: 10px;
+  overflow-x: none;
 }
 
 .header {
   width: 100%;
-  height: 15rem;
+  height: 50px;
 }
 
 .header_main {
-  height: 50%;
+  height: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -92,10 +93,9 @@ body {
 .header_category{
   display: flex;
   align-items: center;
-  height: 50%;
+  height: 100px;
   overflow-x: scroll;
-  width: 200%;
-  gap: 5px;
+  width: 100%;
 }
 
 .header_card{
@@ -103,14 +103,17 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 100%;
-  width: 150px;
-  border: 1px solid black;
+  height: 100px;
+  text-align: center;
+  cursor: pointer;
 }
 
 .card_image{
-  height: 80%;
-  height: 100%;
+  height: 50%;
+}
+
+.card_image img{
+  width: 100%;
 }
 .card_text{
   font-size: var(--small-font);
