--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,10 +27,11 @@ body {
 .header {
   width: 100%;
   height: 200px;
+  position: fixed;
 }
 
 .header_main {
-  height: 20%;
+  height: 25%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -92,6 +93,7 @@ body {
   font-size: var(--normal-bigger-font);
 }
 
+
 .header_category {
   display: flex;
   align-items: center;
@@ -125,6 +127,13 @@ body {
 
 .category_text {
   color: var(--dark-gray-color);
+  margin-bottom: 50px;
+}
+
+.CardList{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 10px;
 }
 
 .CategoryCard_container {
