--- a/src/app/restaurants.css
+++ b/src/app/restaurants.css
@@ -390,5 +390,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.decrease{
+    box-shadow: 0px 3px 4px 2px rgba(0,0,0,0.1);
+    color: var(--theme-pink-color);
+    background: white;
 }
 
